--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "go.goroot": "/Users/qiupeng/QP/Go-LearningGuide",
   "go.inferGopath": true,
-  "go.alternateTools": {}
+  "go.alternateTools": {},
+  "go.useLanguageServer": true,
+  "go.lintOnSave": "file"
 }
